--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <div class="score-panel">
             <div class="score">Score: <span id="score">0</span></div>
             <div class="timer">Time: <span id="time">30</span>s</div>
-            <button id="start-btn">Start Game</button>
-            <button id="restart-btn">Restart</button>
+            <div class="button-group">
+                <button id="start-btn">Start Game</button>
+                <button id="restart-btn">Restart</button>
+            </div>
         </div>
         
         <div id="game-container">
