--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         
         <div id="game-container">
         </div>
+        <audio id="good-sound" src="good-drop.mp3" preload="auto"></audio>
+        <audio id="bad-sound" src="bad-drop.mp3" preload="auto"></audio>
     </div>
     
     <script src="script.js"></script>
